--- a/wp-content/themes/ecokaishu/_scss/pages/_columns.scss
+++ b/wp-content/themes/ecokaishu/_scss/pages/_columns.scss
@@ -12,7 +12,7 @@ article.columns{
 
 //**********************************************************************
 // .msg
-/*
+
 .msg{
 
 	//PC
@@ -65,7 +65,7 @@ article.columns{
 
 	}
 
-}*/
+}
 
 //**********************************************************************
 // listQuote
