--- a/wp-content/themes/ecokaishu/assets/css/form.css
+++ b/wp-content/themes/ecokaishu/assets/css/form.css
@@ -78,7 +78,7 @@ textarea{
 	background: rgba(226, 49, 140, .1);
 	color: #000000;
 	font-weight: bold;
-    vertical-align: middle;
+	vertical-align: middle;
 	line-height: normal;
 }
 #confirm input:checked+label{
@@ -100,7 +100,7 @@ textarea{
 	background: rgba(226, 49, 140, .1);
 	color: #000000;
 	font-weight: bold;
-    vertical-align: middle;
+	vertical-align: middle;
 	line-height: normal;
 }
 
@@ -163,7 +163,7 @@ textarea{
 		content: "必須";
 		background: #e2318c;
 	}
-	#contact2 .required .formTitle:before{
+	#campaign .required .formTitle:before{
 		background: #7ac943;
 	}
 
@@ -213,15 +213,57 @@ textarea{
 		width: 100%;
 	}
 
-	.formContents  .lawDoc {
-	    border: 1px solid rgba(0, 0, 0, 0.1);
-	    font-size: 90%;
-	    height: 160px;
-	    line-height: 1.5em;
-	    overflow-x: hidden;
-	    overflow-y: visible;
-	    padding: 0.5rem;
-	    margin-bottom: 0.5rem;
+	.formContents .lawDoc {
+		display: block !important;
+		line-height: 1.5em;
+		overflow: scroll;
+		overflow-x: hidden;
+		overflow-y: visible;
+		height: 160px;
+		padding: 0.5rem;
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
+		border: 1px solid rgba(0, 0, 0, 0.1);
+		font-size: 90%;
+		text-align: left !important;
+	}
+
+	.formContents .lawDoc h3 {
+		line-height: 1.2em;
+		margin: 0.5rem 0;
+		padding: 0;
+		border: none;
+		text-align: left;
+		font-size: 120%; 
+		background: none;
+	}
+
+	.formContents .lawDoc h4 {
+		margin: 0.5rem 0;
+		padding: 0;
+		font-size: 100%;
+		background: none;
+	}
+	.formContents .lawDoc h4:after{
+		border-left-color: transparent !important;
+		border-top-color: transparent !important;
+	}
+
+	.formContents .lawDoc h5 {
+		margin: 0.5rem 0;
+		padding: 0;
+		font-size: 100%; 
+	}
+
+	.formContents .lawDoc li,
+	.formContents .lawDoc p {
+		margin: 0;
+		padding: 0;
+	}
+
+	#confirm #law{
+		display: none;
 	}
 
 
@@ -265,33 +307,23 @@ textarea{
 		padding: 0 1.0rem;
 	}
 	.formBtns input[type="submit"]{
-		position: relative;
-		-moz-box-shadow: inset 0 1px 0 rgba(256, 256, 256, .35);
-		-ms-box-shadow: inset 0 1px 0 rgba(256, 256, 256, .35);
-		-webkit-box-shadow: inset 0 1px 0 rgba(256, 256, 256, .35);
-		padding: 0.7em 1.0em 0.5em 1.0em;
-		border: none;
-		background: #009ea1;
-		border-bottom: 3px solid #002949;
-		font-weight: bold;
-		color: #ffffff;
-		text-align: center;
-		text-shadow: 0px 0px 3px rgba(0, 0, 0, .9);
-		filter: dropshadow(color=#000000, offx=0, offy=0);
-		cursor: pointer;
-	}
-	#contact2 .formBtns input[type="submit"]{
-		position: relative;
-		-moz-box-shadow: none;
-		-ms-box-shadow: none;
-		-webkit-box-shadow: none;
-		padding: 1em 2em;
-		border: none;
+
+		display: inline-block;
+		-webkit-appearance: none;
+		width: 100%;
+		height: 44px
+		min-height: 44px;
+		padding: 0 2rem;
 		background: #e2318c;
-		font-weight: normal;
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
 		-webkit-border-radius: 6px;
 		-moz-border-radius: 6px;
 		border-radius: 6px;
+		color: #ffffff;
+		line-height: 44px;
+		border: none;
 	}
 	.formBtns input[type="submit"]:hover{
 		background: rgba(0, 0, 0, .5) !important;
