--- a/wp-content/themes/ecokaishu/_scss/pages/_lp.scss
+++ b/wp-content/themes/ecokaishu/_scss/pages/_lp.scss
@@ -118,9 +118,10 @@ h3{
 		//span[class^="icon-"]
 		span[class^="icon-"]{
 			line-height: 0;
+			padding: 0.5rem;
 			@include border-radius(50%);
 			background: $white;
-			font-size: $biggest*2.2;
+			font-size: $bigger*2;
 		}
 
 		//.titlePoint
@@ -231,12 +232,6 @@ h3{
 //**********************************************************************
 
  #lpQuality {
-
- 	.strongPointDetail {
- 		h4 {
- 			text-align: center;
- 		}
- 	}
 
 	// .listStaff
 	//**************************************************************
